* Removed default_sent_directory(), and introduced   default_mail{_in|_out}_directory() methods in the BPrivate namespace. * Used these methods in the inbound/outbound protocols. * Moved WriteMessageFile() into the BPrivate namespace as well, and put its   prototype into a new header MailPrivate.h along with the new directory   getters. * Removed the automatic copy to the sent directory again, and only have one   directory for incoming mail. Incidentally, this fixed #7509, although the   underlying filter restriction remains. * Automatic whitespace cleanups, some style cleanups. Sorry for the mess.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42260 a95241bf-73f2-0310-859d-f6bbb57e9c96