src/add-ons/mail_daemon/outbound_protocols/smtp/ConfigView.cpp
@@ -10,9 +10,10 @@
 #include <TextControl.h>
 
 #include <FileConfigView.h>
-#include <MDRLanguage.h>
 #include <MailAddon.h>
+#include <MDRLanguage.h>
 #include <MenuField.h>
+#include <MailPrivate.h>
 #include <ProtocolConfigView.h>
 
 
@@ -23,45 +24,42 @@ public:
 			status_t			Archive(BMessage *into, bool deep = true) const;
 			void				GetPreferredSize(float *width, float *height);
 private:
-			BMailFileConfigView*	fFileView;
+			BMailFileConfigView* fFileView;
 };
 
 
 SMTPConfigView::SMTPConfigView(MailAddonSettings& settings,
 	BMailAccountSettings& accountSettings)
 	:
-	#ifdef USE_SSL
-	BMailProtocolConfigView( B_MAIL_PROTOCOL_HAS_AUTH_METHODS
-		| B_MAIL_PROTOCOL_HAS_USERNAME | B_MAIL_PROTOCOL_HAS_PASSWORD
-		| B_MAIL_PROTOCOL_HAS_HOSTNAME | B_MAIL_PROTOCOL_HAS_FLAVORS)
-	#else
 	BMailProtocolConfigView(B_MAIL_PROTOCOL_HAS_AUTH_METHODS
 		| B_MAIL_PROTOCOL_HAS_USERNAME | B_MAIL_PROTOCOL_HAS_PASSWORD
-		| B_MAIL_PROTOCOL_HAS_HOSTNAME)
-	#endif
+		| B_MAIL_PROTOCOL_HAS_HOSTNAME
+#ifdef USE_SSL
+		| B_MAIL_PROTOCOL_HAS_FLAVORS
+#endif
+		)
 {
-	#ifdef USE_SSL
+#ifdef USE_SSL
 	AddFlavor("Unencrypted");
 	AddFlavor("SSL");
 	AddFlavor("STARTTLS");
-	#endif
+#endif
 
 	AddAuthMethod(MDR_DIALECT_CHOICE("None","無し"), false);
 	AddAuthMethod(MDR_DIALECT_CHOICE("ESMTP","ESMTP"));
-	AddAuthMethod(MDR_DIALECT_CHOICE("POP3 before SMTP","送信前に受信する"),
-		false);
+	AddAuthMethod(MDR_DIALECT_CHOICE("POP3 before SMTP","送信前に受信する"), false);
 
 	BTextControl *control = (BTextControl *)(FindView("host"));
 	control->SetLabel(MDR_DIALECT_CHOICE("SMTP server: ","SMTPサーバ: "));
 
 	// Reset the dividers after changing one
-	float widestLabel=0;
+	float widestLabel = 0;
 	for (int32 i = CountChildren(); i-- > 0;) {
-		if(BTextControl *text = dynamic_cast<BTextControl *>(ChildAt(i)))
+		if (BTextControl *text = dynamic_cast<BTextControl *>(ChildAt(i)))
 			widestLabel = MAX(widestLabel,text->StringWidth(text->Label()) + 5);
 	}
 	for (int32 i = CountChildren(); i-- > 0;) {
-		if(BTextControl *text = dynamic_cast<BTextControl *>(ChildAt(i)))
+		if (BTextControl *text = dynamic_cast<BTextControl *>(ChildAt(i)))
 			text->SetDivider(widestLabel);
 	}
 
@@ -70,8 +68,8 @@ SMTPConfigView::SMTPConfigView(MailAddonSettings& settings,
 
 	SetTo(settings);
 
-	fFileView =  new BMailFileConfigView("Destination:", "destination",
-		false, default_sent_directory());
+	fFileView = new BMailFileConfigView("Destination:", "path", false,
+		BPrivate::default_mail_out_directory().Path());
 	fFileView->SetTo(&settings.Settings(), NULL);
 	AddChild(fFileView);
 	float w, h;
