src/kits/mail/MailSettings.cpp
@@ -1,14 +1,19 @@
 /*
  * Copyright 2001-2003 Dr. Zoidberg Enterprises. All rights reserved.
- * Copyright 2004-2009, Haiku Inc. All rights reserved.
+ * Copyright 2004-2011, Haiku Inc. All rights reserved.
  *
  * Distributed under the terms of the MIT License.
  */
+
 
 //!	The mail daemon's settings
 
 
 #include <MailSettings.h>
+
+#include <stdio.h>
+#include <string.h>
+#include <stdlib.h>
 
 #include <Directory.h>
 #include <Entry.h>
@@ -20,26 +25,7 @@
 #include <String.h>
 #include <Window.h>
 
-#include <stdio.h>
-#include <string.h>
-#include <stdlib.h>
-
-
-namespace MailInternal {
-	status_t WriteMessageFile(const BMessage& archive, const BPath& path,
-		const char* name);
-}
-
-
-BString
-default_sent_directory()
-{
-	BPath path;
-	if (find_directory(B_USER_DIRECTORY, &path) != B_OK)
-		path.SetTo("/boot/home");
-	path.Append("mail/sent");
-	return path.Path();
-}
+#include <MailPrivate.h>
 
 
 //	#pragma mark - BMailSettings
@@ -81,7 +67,8 @@ BMailSettings::Save(bigtime_t /*timeout*/)
 
 	path.Append("Mail");
 
-	status_t result = MailInternal::WriteMessageFile(fData,path,"new_mail_daemon");
+	status_t result = BPrivate::WriteMessageFile(fData, path,
+		"new_mail_daemon");
 	if (result < B_OK)
 		return result;
 
@@ -95,7 +82,7 @@ status_t
 BMailSettings::Reload()
 {
 	status_t ret;
-	
+
 	BPath path;
 	ret = find_directory(B_USER_SETTINGS_DIRECTORY, &path);
 	if (ret != B_OK) {
@@ -103,9 +90,9 @@ BMailSettings::Reload()
 			strerror(ret));
 		return ret;
 	}
-	
+
 	path.Append("Mail/new_mail_daemon");
-	
+
 	// open
 	BFile settings(path.Path(),B_READ_ONLY);
 	ret = settings.InitCheck();
@@ -114,7 +101,7 @@ BMailSettings::Reload()
 			path.Path(), strerror(ret));
 		return ret;
 	}
-	
+
 	// read settings
 	BMessage tmp;
 	ret = tmp.Unflatten(&settings);
@@ -205,7 +192,7 @@ BMailSettings::StatusWindowFrame()
 	BRect frame;
 	if (fData.FindRect("StatusWindowFrame", &frame) != B_OK)
 		return BRect(100, 100, 200, 120);
-	
+
 	return frame;
 }
 
@@ -253,7 +240,7 @@ BMailSettings::SetStatusWindowLook(int32 look)
 {
 	if (fData.ReplaceInt32("StatusWindowLook",look))
 		fData.AddInt32("StatusWindowLook",look);
-		
+
 	BMessage msg('lkch');
 	msg.AddInt32("StatusWindowLook",look);
 	BMessenger("application/x-vnd.Be-POST").SendMessage(&msg);
@@ -366,7 +353,6 @@ BMailAccounts::BMailAccounts()
 			creationTimeList.insert(creationTimeList.begin() + insertIndex,
 				creationTime);
 		}
-		
 	}
 }
 
@@ -911,7 +897,7 @@ BMailAccountSettings::_CreateAccountFilePath()
 
 	BString fileName = fAccountName;
 	if (fileName == "")
-		fileName << fAccountID;	
+		fileName << fAccountID;
 	for (int i = 0; ; i++) {
 		BString testFileName = fileName;
 		if (i != 0) {
@@ -923,7 +909,7 @@ BMailAccountSettings::_CreateAccountFilePath()
 		BEntry testEntry(testPath.Path());
 		if (!testEntry.Exists()) {
 			fileName = testFileName;
-			break;	
+			break;
 		}
 	}
 
